# Cyboquatics

./: -Researchline2026nonfictive-KKnowledge-EEcoimpact-RRiskofharm-Whyjustresearchinghelps.csv  .gitignore  Artifact-KKnowledge-EEcoImpact-RRiskofHarm-Notes.csv  Artifact-Kknowledge-Eecoimpact-Rriskofharm-Notes (1).csv  Aspect-Rustalncalibratorbenefit.csv  BiocharAirGloSwarmSafety2026v1.csv  CMakeLists.txt  Cargo.toml  Layerartifact-Kknowledge-Eecoimpact-Rriskofharm-So.csv  README.md  TriMetricCertEngine.hpp  biodeg_kinetics.rs  ecosafety_drain_corridors.aln  table-4a8a132f-d632-4939-8ffc-05d9d242fb16 (1).csv  table-4a8a132f-d632-4939-8ffc-05d9d242fb16 (2).csv  table-4a8a132f-d632-4939-8ffc-05d9d242fb16.csv  table-9335ec78-2f3c-407b-b007-ff0d7b4e6ad1 (1).csv  table-9335ec78-2f3c-407b-b007-ff0d7b4e6ad1 (2).csv  table-9335ec78-2f3c-407b-b007-ff0d7b4e6ad1 (3).csv  table-9335ec78-2f3c-407b-b007-ff0d7b4e6ad1.csv  table-eec34155-69cf-4b50-a433-2270d0a04baa.csv
.github/workflows/: aln-particle-validation.yml  ci-cd.yaml  ci-csharp.yml  ci-rust.yml  ci.yml  ecosafety-industrial-ci.yml  quantum-circuit-testing.yml  verify-safety.yml
.specs/: CyboquaticIndustrialNode2026v1.aln
Cyboquatics/: README.md
Cyboquatics/docs/: DESIGN.md  ENERGY-CLOSURE.md  SAFETY-MARINE-LIFE.md
Cyboquatics/src/cyboquatic-core/: Cargo.toml
Cyboquatics/src/cyboquatic-core/src/: hydrokinetic.rs  intake_safety.rs  lib.rs  pfbs_remediation.rs
EcoNetCentralAZv1/src/: CEIMRunner.cpp
EcoNetHydroBioSAT/src/: ScenarioKernel.hpp
Models/: HydrokineticCalculator.cs
air-globe-lyapunov-2026/src/: kernels.rs  normalize_air.rs
aln/: AntCyboMaterialLinkPhoenix2026v1.aln  DataQualityInvariants2026v1.aln  EcoNetMaterialCybo2026.aln  PlaneNonCompensationInvariants2026v1.aln  PlaneUncertaintyInvariants2026v1.aln  PlaneWeightsShard2026v1.aln  ecosafety.corridors.v2.aln  ecosafety.material_kinetics.v1.aln  ecosafety.material_risks.v1.aln  ecosafety.riskvector.v2.aln  pilot_gates.cyboquatic-phoenix.aln  qpudatashard.ecosafety.v1.aln
aln/particles/: cyboquatics.quantum.automation.v1.aln  cyboquatics.quantum.governance.v1.aln  cyboquatics.soul.guardrail.v1.aln  nanoswarm.corridor.v1.aln
alnspecs/: EcoNetMaterialCybo2026.aln
c_kernels/include/: brain_identity_residual.hpp
ci/rcalib_rsigma_governance/: ActionItemsDataQuality2026v1.csv
co2-substrate-conv-2026/src/: kernels.rs  normalize_conv.rs
cpp/: cyboquatic_residual_mirror.hpp
crates/cyboquatic-ceim/: Cargo.toml
crates/cyboquatic-cpvm/: Cargo.toml
crates/cyboquatic-drain-node/: Cargo.toml
crates/cyboquatic-drain-node/src/: config.rs  controller.rs  main.rs
crates/cyboquatic-industrial-ecosafety-core/: Cargo.toml
crates/cyboquatic-industrial-ecosafety-core/src/: controller.rs  decisions.rs  ker.rs  lane_gate.rs  lib.rs  node.rs  planes.rs
crates/cyboquatic-industrial-shards/: Cargo.toml
crates/cyboquatic-industrial-shards/src/: conversion.rs  industrial_node.rs  lib.rs  validation.rs
crates/cyboquatic-industrial-shards/tests/: integration_tests.rs
crates/cyboquatic-industrial-shards/tests/data/: pilot_admissible.json  production_admissible.json  production_residual_exceeded.json  research_no_corridor.json
crates/cyboquatic-industrial-sim/: Cargo.toml
crates/cyboquatic-industrial-sim/src/: lib.rs
crates/cyboquatics-quantum-circuits/: Cargo.toml  README.md
crates/cyboquatics-quantum-circuits/src/: lib.rs
crates/ecosafety-core/: Cargo.toml
crates/qpudatashard-schema/: Cargo.toml
crates/qpudatashard-schema/src/: lib.rs
cyboquatic-ecosafety-core/: build.rs
cyboquatic-fog-router/: Cargo.toml
cyboquatic-fog-router/src/: lib.lua  main.rs
cyboquatic-gateway/: Cargo.toml
cyboquatic-gateway/src/: audit.rs  calibration.rs  gateway.rs  invariants.rs  lib.rs
docs/: 100-research-questions.md  ALN-Invariants.md  CI-MaterialsPlane-Rules.md  ECOSAFETY_GRAMMAR.md  KER_SCORING_GUIDE.md  MaterialsPlaneV1-Spec.md  PlaneNonCompensationAndUncertainty.md  README.md  Reducing environmental releases of aspartame (incl.md  SpineV1-Spec.md  TRI_METRIC_CERTIFICATION.md  cyboquatic-water-reuse-framework.md  river_nervous_system_corridor.mmd
econet-material-cybo/: Cargo.toml
econet-material-cybo/src/: lib.rs
edge/: ker_status_panel.lua
examples/: phoenix_pilot_config.toml
include/: cybo_ceim.h  cybo_cpvm.h  cybo_qpudata.h  dr_lbn_shard_exporter.hpp
lua/: cyboquatic_shard_logger.lua
proofs/: Cargo.toml  treatment_sat_verify.rs
qpudatashards/: IngestRcalibPhoenix2026v1.aln  PlaneWeightsShard2026v1.csv  blitzmax_to_rust_schemas.aln  econet_ceim_core_qpudatashard.aln  particlesCyboquaticIndustrialPhoenix2026v1.aln  particlesPhoenixIngestTrust2026v1.csv
qpudatashardsparticles/: PhoenixEcoNet_CEIM_NodeWindows_v1.csv  Phoenix_CAP_Gila_Colorado_Corridor_CEIMNodes_v1.csv  Phoenix_CEIM_NodeKarma_CI_YYYYMMDD.csv  Phoenix_CPVM_CEIM_WaterKernel_v1.csv
qpudatashardsphoenix/: PHXCityWaterGates2026v1.csv
schemas/: cyboquatic-ecosafety-node.aln
scripts/: ecosafety-cybo-industrial.sh  validate_assumptions.py
specs/: CyboquaticIndustrialNode2026.aln  CyboquaticNodeShard2026v1.aln  CyboquaticPhoenixEcosafety2026v2.aln  ToolchainPolicyRustOnOss2026v1.md  corridors.ecosafety.carbon_biodiversity.v1.aln  ecosafety-core-components-2026v1.csv  ecosafety.riskvector.2026v1.aln  ecosafety.riskvector.carbon_biodiversity.v1.aln  ecosafety_planes_math_targets_2026v1.csv  invariant_kerdeployable.aln  qpudatashards.phoenix_mar.aln  rcalib-rsigma-proof-obligations-2026v1.csv  rcalib_kernel_components_2026v1.csv
src/: ancestral_corridor.hpp  calibrator_kernels.rs  calibrator_types.rs  carbon_balance.hpp  cybo_ceim.cpp  cybo_cpvm.cpp  cybo_qpudata_csv.cpp  cyboquatic_resonance_controller_v1.rs  ecosafety_constraints.hpp  hardware_api.rs  hydraulics_transport.hpp  ker_metrics.hpp  ker_plane_adjust.hpp  lib.rs  lyapunov_residual.hpp  main_phx_sim.cpp  material_kinetics.hpp  non_actuating.rs  risk_coords.hpp  verification.rs
src/rust/: lib.rs
validators/: cybo_ecosafety_validator.cpp  cybo_ecosafety_validator.rs
vehicle-filter-2026/: Cargo.toml  build.rs
(+232 files in other folders)
