[workspace]
members = [
    "crates/ecosafety-core",
    "crates/qpudatashard-schema",
    "crates/cyboquatic-drain-node",
    "crates/cyboquatic-industrial-ecosafety-core",
    "crates/cyboquatic-industrial-shards",
    "crates/cyboquatic-industrial-sim",
]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
